# verify-c-common

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  verify.py.in
.github/workflows/: main.yml
docker/: aws-c-common.Dockerfile  verify-c-common-klee.Dockerfile  verify-c-common-symbiotic.Dockerfile  verify-c-common.Dockerfile
fuzzing_coverage/: index-sort-f.html  index-sort-l.html  index.html
fuzzing_coverage/aws-c-common/source/: allocator.c.func-sort-c.html  allocator.c.func.html  allocator.c.gcov.html  array_list.c.func-sort-c.html  array_list.c.func.html  array_list.c.gcov.html  assert.c.func-sort-c.html  assert.c.func.html  assert.c.gcov.html  byte_buf.c.func-sort-c.html  byte_buf.c.func.html  byte_buf.c.gcov.html  common.c.func-sort-c.html  common.c.func.html  common.c.gcov.html  condition_variable.c.func-sort-c.html  condition_variable.c.func.html  condition_variable.c.gcov.html  date_time.c.func-sort-c.html  date_time.c.func.html  date_time.c.gcov.html  error.c.func-sort-c.html  error.c.func.html  error.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  log_channel.c.func-sort-c.html  log_channel.c.func.html  log_channel.c.gcov.html  log_formatter.c.func-sort-c.html  log_formatter.c.func.html  log_formatter.c.gcov.html  log_writer.c.func-sort-c.html  log_writer.c.func.html  log_writer.c.gcov.html  logging.c.func-sort-c.html  logging.c.func.html  logging.c.gcov.html  string.c.func-sort-c.html  (+2 more)
fuzzing_coverage/seahorn/include/: index-sort-f.html  index-sort-l.html  index.html  proof_allocators.h.func-sort-c.html  proof_allocators.h.func.html  proof_allocators.h.gcov.html  utils.h.func-sort-c.html  utils.h.func.html  utils.h.gcov.html
fuzzing_coverage/seahorn/lib/: bounds.c.func-sort-c.html  bounds.c.func.html  bounds.c.gcov.html  fuzz_allocators.c.func-sort-c.html  fuzz_allocators.c.func.html  fuzz_allocators.c.gcov.html  fuzz_array_list_helper.c.func-sort-c.html  fuzz_array_list_helper.c.func.html  fuzz_array_list_helper.c.gcov.html  fuzz_byte_buf_helper.c.func-sort-c.html  fuzz_byte_buf_helper.c.func.html  fuzz_byte_buf_helper.c.gcov.html  fuzz_string_helper.c.func-sort-c.html  fuzz_string_helper.c.func.html  fuzz_string_helper.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  nd_fuzz.c.func-sort-c.html  nd_fuzz.c.func.html  nd_fuzz.c.gcov.html  utils.c.func-sort-c.html  utils.c.func.html  utils.c.gcov.html
patch/: seabmc_cal.patch  seabmc_common.patch  seabmc_compression.patch  seabmc_io.patch  seabmc_sdkutils.patch
patch/bug-examples/: 0003-examples-cex-add-patch-for-bug-3-in-hash_iter.patch
res/: aws-cbmc.csv  cbmc_SAT_0001.csv  cbmc_SAT_0002.csv  experiment_tables.ipynb  klee.csv  klee_SAT_0001.csv  klee_SAT_0002.csv  loc.csv  seahorn(cex).csv  seahorn(cex, smt-y2).csv  seahorn(cex,smt-y2).csv  seahorn(smt-y2).csv  seahorn(vac).csv  seahorn(vac,smt-y2).csv  seahorn.csv  seahorn2.csv  seahorn_SAT_0001.csv  seahorn_SAT_0002.csv  seahorn_SAT_0003.csv  smack.csv  smack_SAT_0001.csv  smack_SAT_0002.csv  symbiotic.csv
res/vstte/data/: AI4BMC_zones_Z3.csv
scripts/: clean_up.sh  get_exper_brunch_stat.py  get_exper_res.py  get_paper_results.py  pull_aws_repo.sh  run_case_study_experiments.sh  run_experiments.sh  tvpi.ipynb
seahorn/: CMakeLists.txt  sea_crab.yaml  sea_crab_base.yaml
seahorn/aws-c-common-stubs/: aws_round_up_to_power_of_two_overrides.c  s_update_template_size_override.c  snprintf_overrides.c
seahorn/include/: nondet.h  pthread_helper.h
seahorn/jobs/array_eq_c_str/: aws_array_eq_c_str_harness.c
seahorn/jobs/array_list_back/: CMakeLists.txt
seahorn/jobs/array_list_capacity/: CMakeLists.txt
seahorn/jobs/array_list_clean_up/: CMakeLists.txt
seahorn/jobs/array_list_clear/: CMakeLists.txt
seahorn/jobs/array_list_comparator_string/: CMakeLists.txt  aws_array_list_comparator_string_harness.c  sea.yaml
seahorn/jobs/array_list_copy/: CMakeLists.txt
seahorn/jobs/array_list_ensure_capacity/: CMakeLists.txt
seahorn/jobs/array_list_erase/: CMakeLists.txt
seahorn/jobs/array_list_front/: CMakeLists.txt
seahorn/jobs/array_list_get_at/: CMakeLists.txt
seahorn/jobs/array_list_get_at_ptr/: CMakeLists.txt
seahorn/jobs/byte_buf_from_array/: CMakeLists.txt
seahorn/jobs2/byte_cursor_split_on_char2/: CMakeLists.txt  aws_byte_cursor_split_on_char_n_harness2.c  sea.yaml
seahorn/jobs_cal/der/: CMakeLists.txt  aws_der_harness.c  sea.yaml
seahorn/jobs_cal/ecc/: CMakeLists.txt  aws_ecc_harness.c  sea.yaml
seahorn/jobs_cal/rsa/: CMakeLists.txt  aws_rsa_harness.c
seahorn/jobs_cal/sha1/: CMakeLists.txt  aws_sha1_harness.c  sea.yaml
seahorn/jobs_cal/sha256/: CMakeLists.txt  aws_sha256_harness.c  sea.yaml
seahorn/jobs_cal/sha256_hmac/: CMakeLists.txt  aws_sha256_hmac_harness.c
seahorn/jobs_compression/huffman_test_transitive/: CMakeLists.txt  aws_huffman_test_transitive_harness.c  sea.yaml
seahorn/jobs_compression/huffman_test_transitive_chunked/: CMakeLists.txt  aws_huffman_test_transitive_chunked_harness.c  sea.yaml
seahorn/jobs_io/event_loop_group_setup_and_shutdown/: CMakeLists.txt  aws_event_loop_group_setup_and_shutdown_harness.c
seahorn/jobs_io/event_thread_task_run/: CMakeLists.txt  aws_event_thread_task_run_harness.c
seahorn/jobs_io/input_stream_from_cursor/: CMakeLists.txt  aws_input_stream_from_cursor_harness.c
seahorn/jobs_io/pem_objects_init_from_file_contents/: CMakeLists.txt  aws_pem_objects_init_from_file_contents_harness.c  sea.yaml
seahorn/jobs_io/sanitize_pem/: CMakeLists.txt  aws_sanitize_pem_harness.c  sea.yaml
seahorn/jobs_sdkutils/endpoints_rule_engine/: CMakeLists.txt  aws_endpoints_rule_engine_harness.c
seahorn/jobs_sdkutils/profile_collection_new_from_buffer/: CMakeLists.txt  aws_profile_collection_new_from_buffer_harness.c  sea.yaml
seahorn/jobs_sdkutils/profile_collection_new_from_merge/: CMakeLists.txt  aws_profile_collection_new_from_merge_harness.c  sea.yaml
seahorn/lib/: CMakeLists.txt  array_list_helper.c  bcmp.c  klee_switch.c  proof_allocators.c  pthread_helper.c  sea_allocators.c  string_helper.c
seahorn/scripts/: create_alloce_size_switch.py
(+616 files in other folders)
